--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,8 @@
 *.iml
 .gradle
 /local.properties
-/.idea/workspace.xml
-/.idea/libraries
+.idea/*
+!.idea/codeStyles/
 .DS_Store
-/build
+build
 /captures
