--- a/app/build.gradle
+++ b/app/build.gradle
@@ -16,7 +16,6 @@ apply plugin: 'kotlin-android-extensions'
 
 android {
     compileSdkVersion 28
-    buildToolsVersion '27.0.3'
 
     defaultConfig {
         applicationId "com.hiteshsahu.stt_tts"
@@ -32,6 +31,7 @@ android {
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
         }
     }
+    namespace 'com.hiteshsahu.stt_tts'
 }
 
 dependencies {
